--- a/EIMarketplace/Web.config
+++ b/EIMarketplace/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     
-    <add name="DefaultConnection" connectionString="Server=tcp:oqh9nre1j7.database.windows.net,1433;Database=eimarkeAWalQV0W0;User ID=eimarketplace@oqh9nre1j7;Password=bHegdris13!d;Trusted_Connection=False;Encrypt=True;Connection Timeout=30; Initial Catalog=aspnet-EIMarketplace-20130730021718;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-EIMarketplace-20130730021718.mdf" providerName="System.Data.SqlClient" />
-    <add name="ListingDBContext" connectionString="Server=tcp:oqh9nre1j7.database.windows.net,1433;Database=eimarkeAWalQV0W0;User ID=eimarketplace@oqh9nre1j7;Password=bHegdris13!d;Trusted_Connection=False;Encrypt=True;AttachDbFilename=|DataDirectory|\Listings.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:oqh9nre1j7.database.windows.net,1433;Database=eimarkeAWalQV0W0;User ID=eimarketplace@oqh9nre1j7;Password=bHegdris13!d;" providerName="System.Data.SqlClient" />
+    <add name="ListingDBContext" connectionString="Server=tcp:oqh9nre1j7.database.windows.net,1433;Database=eimarkeAWalQV0W0;User ID=eimarketplace@oqh9nre1j7;Password=bHegdris13!d;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
